2016-10-28, S3QL 2.21

  * Added workaround for an issue where S3QL crashes with an
    "ssl.SSLError: [SSL: BAD_WRITE_RETRY]" exception. This problem has
    to be fixed in Python, but we now work around it by closing and
    re-opening the connection when it occurs.

2016-08-24, S3QL 2.20

  * Fixed a problem with exporting S3QL file systems over NFS4,
    where directory contents would appear in duplicate.

2016-06-27, S3QL 2.19

  * Fixed a crash when running s3qlstat on an almost empty
    file system.

2016-04-29, S3QL 2.18

  * The `runtests.py` file has been dropped in favor of requiring
    installation of py.test.

  * S3QL now uses semantic versioning. This means that
    backwards-incompatible versions (i.e., versions that require an
    upgrade of the file system revision) will be reflected in an
    increase of the major version number, i.e. the next
    backwards-incompatible version will have version 3.0.

  * Enabled several FUSE optimizations (most importantly, the
    ``big_writes`` feature) that got accidentally disabled at
    some point in the past. This should result in significant
    performance improvements.

    Thanks to Simon Brown for the report!

  * Fixed a crash with "BUG ALERT: Dirty inode was destroyed".

2016-03-08, S3QL 2.17.1

  * Fixed a bug in the upgrade procedure that prevented file system
    modifications when successive commands used the local metadata
    cache.

  * Fixed a bug in the upgrade procedure that resulted in corrupted
    file [acm]times when there was no cached metadata available for
    both s3qladm and the first fsck.s3ql/mount.s3ql invocation after
    the upgrade.

2016-03-08, S3QL 2.17

  * The internal file system revision has changed. File systems
    created with S3QL 2.17 or newer are not compatible with prior S3QL
    versions. To update an existing file system to the newest
    revision, use the `s3qladm upgrade` command.

  * Due to a bug in the FUSE kernel module