@@ -13,6 +13,10 @@ from .common import NoSuchObject, retry
 from ..inherit_docstrings import copy_ancestor_docstring
 from xml.sax.saxutils import escape as xml_escape
 import re
+import time
+import urllib.parse
+import hashlib
+import hmac
 
 log = logging.getLogger(__name__)
 
@@ -36,36 +40,25 @@ class Backend(s3c.Backend):
                      - {'dumb-copy', 'disable-expect100'})
 
     def __init__(self, storage_url, login, password, options):
+        self.region = None
+        self.signing_key = None
         super().__init__(storage_url, login, password, options)
 
-    @staticmethod
-    def _parse_storage_url(storage_url, ssl_context):
-        hit = re.match(r'^s3s?://([^/]+)(?:/(.*))?$', storage_url)
+    def _parse_storage_url(self, storage_url, ssl_context):
+        hit = re.match(r'^s3s?://([^/]+)/([^/]+)(?:/(.*))?$', storage_url)
         if not hit:
             raise QuietError('Invalid storage URL', exitcode=2)
 
-        bucket_name = hit.group(1)
+        self.region = hit.group(1)
+        bucket_name = hit.group(2)
 
         # http://docs.amazonwebservices.com/AmazonS3/2006-03-01/dev/BucketRestrictions.html
         if not re.match('^[a-z0-9][a-z0-9.-]{1,60}[a-z0-9]$', bucket_name):
             raise QuietError('Invalid bucket name.', exitcode=2)
 
-        # Dots in the bucket cause problems with SSL certificate validation,
-        # because server certificate is for *.s3.amazonaws.com (which does not
-        # match e.g. a.b.s3.amazonaws.com). However, when using path based
-        # bucket selection, AWS issues a redirect to the former
-        # location. Therefore, S3 buckets with dots in their names cannot be
-        # accessed securely. This can only be fixed by Amazon by allowing
-        # path-based bucket selection, or providing a valid SSL certificate for
-        # endpoints that also matches if the bucket name contains dots.
-        if '.' in bucket_name and ssl_context:
-            raise QuietError('Buckets with dots in the name cannot be accessed over SSL.\n'
-                             'This is purely Amazon\'s fault, see '
-                             'https://forums.aws.amazon.com/thread.jspa?threadID=130560',
-                             exitcode=2)
-        hostname = '%s.s3.amazonaws.com' % bucket_name
+        hostname = 's3-%s.amazonaws.com' % self.region
 
-        prefix = hit.group(2) or ''
+        prefix = hit.group(3) or ''
         port = 443 if ssl_context else 80
         return (hostname, port, bucket_name, prefix)
 
@@ -161,3 +154,83 @@ class Backend(s3c.Backend):
 
         except:
             self.conn.discard()
+
+    def _authorize_request(self, method, path, headers, subres, query_string):
+        '''Add authorization information to *headers*'''
+
+        # See http://docs.aws.amazon.com/AmazonS3/latest/API/sigv4-auth-using-authorization-header.html
+
+        now = time.gmtime()
+        #now = time.strptime('Fri, 24 May 2013 00:00:00 GMT',
+        #                    '%a, %d %b %Y %H:%M:%S GMT')
+
+        ymd = time.strftime('%Y%m%d', now)
+        ymdhms = time.strftime('%Y%m%dT%H%M%SZ', now)
+
+        headers['x-amz-date'] = ymdhms
+        headers['x-amz-content-sha256'] = 'UNSIGNED-PAYLOAD'
+        #headers['x-amz-content-sha256'] = hashlib.sha256(body).hexdigest()
+        headers.pop('Authorization', None)
+
+        auth_strs = [method]
+        auth_strs.append(urllib.parse.quote(path))
+
+        if query_string:
+            s = urllib.parse.urlencode(query_string, doseq=True).split('&')
+        else:
+            s = []
+        if subres:
+            s.append(urllib.parse.quote_plus(subres) + '=')
+        if s:
+            s = '&'.join(sorted(s))
+        else:
+            s = ''
+        auth_strs.append(s)
+
+        # Headers
+        sig_hdrs = sorted(x.lower() for x in headers.keys())
+        for hdr in sig_hdrs:
+            auth_strs.append('%s:%s' % (hdr, headers[hdr].strip()))
+        auth_strs.append('')
+        auth_strs.append(';'.join(sig_hdrs))
+        auth_strs.append(headers['x-amz-content-sha256'])
+        can_req = '\n'.join(auth_strs)
+        #log.debug('canonical request: %s', can_req)
+
+        can_req_hash = hashlib.sha256(can_req.encode()).hexdigest()
+        str_to_sign = ("AWS4-HMAC-SHA256\n" + ymdhms + '\n' +
+                       '%s/%s/s3/aws4_request\n' % (ymd, self.region) +
+                       can_req_hash)
+        #log.debug('string to sign: %s', str_to_sign)
+
+        if self.signing_key is None or self.signing_key[1] != ymd:
+            self.update_signing_key(ymd)
+        signing_key = self.signing_key[0]
+
+        sig = hmac_sha256(signing_key, str_to_sign.encode(), hex=True)
+
+        cred = ('%s/%04d%02d%02d/%s/s3/aws4_request'
+                % (self.login, now.tm_year, now.tm_mon, now.tm_mday,
+                   self.region))
+
+        headers['Authorization'] = (
+            'AWS4-HMAC-SHA256 '
+            'Credential=%s,'
+            'SignedHeaders=%s,'
+            'Signature=%s' % (cred, ';'.join(sig_hdrs), sig))
+
+    def update_signing_key(self, ymd):
+        date_key = hmac_sha256(("AWS4" + self.password).encode(),
+                               ymd.encode())
+        region_key = hmac_sha256(date_key, self.region.encode())
+        service_key = hmac_sha256(region_key, b's3')
+        signing_key = hmac_sha256(service_key, b'aws4_request')
+
+        self.signing_key = (signing_key, ymd)
+
+def hmac_sha256(key, msg, hex=False):
+    d = hmac.new(key, msg, hashlib.sha256)
+    if hex:
+        return d.hexdigest()
+    else:
+        return d.digest()
